--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -17,7 +17,6 @@ name: 'integration'
 on:
   pull_request:
     types:
-      - 'edited'
       - 'opened'
       - 'synchronize'
       - 'reopened'
@@ -76,8 +75,7 @@ jobs:
       contents: 'read'
       pull-requests: 'write'
     outputs:
-      update-dirs: '${{ steps.entrypoints.outputs.update-dirs }}'
-      destroy-dirs: '${{ steps.entrypoints.outputs.destroy-dirs }}'
+      directories: '${{ steps.dirs.outputs.directories }}'
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332' # ratchet:actions/checkout@v4
@@ -106,22 +104,19 @@ jobs:
           guardian workflows remove-guardian-comments
 
       - name: 'Guardian Directories'
-        id: 'entrypoints'
+        id: 'dirs'
         shell: 'bash'
         env:
+          # used to create comments on pull requests (access to only this repo)
           GUARDIAN_GITHUB_TOKEN: '${{ github.token }}'
-          GITHUB_PULL_REQUEST_BODY: 'GUARDIAN_DESTROY=terraform/project2'
         run: |-
-          ENTRYPOINTS=$(guardian entrypoints -dir=./terraform/project1 -dir=./terraform/project2)
-          echo "entrypoints -> ${ENTRYPOINTS}"
-
-          # parse the json response and create outputs for each type of directory
-          echo "update-dirs=$(echo $ENTRYPOINTS | jq -j -c '.update')" >> $GITHUB_OUTPUT
-          echo "destroy-dirs=$(echo $ENTRYPOINTS | jq -j -c '.destroy')" >> $GITHUB_OUTPUT
+          DIRECTORIES=$(guardian entrypoints -dir=./terraform/project1 -dir=./terraform/project2)
+          echo "entrypoints -> ${DIRECTORIES}"
+          echo "directories=${DIRECTORIES}" >> $GITHUB_OUTPUT
 
   plan:
     if: |
-      needs.init-plan.outputs.update-dirs != '[]'
+      needs.init-plan.outputs.directories != '[]'
     needs:
       - 'init-plan'
     runs-on: 'ubuntu-latest'
@@ -133,7 +128,7 @@ jobs:
       fail-fast: false
       max-parallel: 100
       matrix:
-        working_directory: '${{ fromJSON(needs.init-plan.outputs.update-dirs) }}'
+        working_directory: '${{ fromJSON(needs.init-plan.outputs.directories) }}'
     env:
       DIRECTORY: '${{ matrix.working_directory }}'
       GITHUB_JOB_NAME: '${{ github.job }} (${{ matrix.working_directory }})'
@@ -177,86 +172,11 @@ jobs:
         run: |-
           guardian plan -dir="${DIRECTORY}" -storage="gcs://${GUARDIAN_BUCKET_NAME}"
 
-  plan_destroy:
-    if: |
-      needs.init-plan.outputs.destroy-dirs != '[]'
-    needs:
-      - 'init-plan'
-    runs-on: 'ubuntu-latest'
-    permissions:
-      contents: 'read'
-      id-token: 'write'
-      pull-requests: 'write'
-    strategy:
-      fail-fast: false
-      max-parallel: 100
-      matrix:
-        working_directory: '${{ fromJSON(needs.init-plan.outputs.destroy-dirs) }}'
-    env:
-      DIRECTORY: '${{ matrix.working_directory }}'
-      GITHUB_JOB_NAME: '${{ github.job }} (${{ matrix.working_directory }})'
-    steps:
-      - name: 'Checkout'
-        uses: 'actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332' # ratchet:actions/checkout@v4
-
-      - name: 'Authenticate to Google Cloud'
-        uses: 'google-github-actions/auth@71fee32a0bb7e97b4d33d548e7d957010649d8fa' # ratchet:google-github-actions/auth@v2
-        with:
-          workload_identity_provider: '${{ env.GUARDIAN_WIF_PROVIDER }}'
-          service_account: '${{ env.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
-
-      - name: 'Setup Terraform'
-        uses: 'abcxyz/secure-setup-terraform@fa5832adc577578c1dfb422d13722bdeb711cf29' # ratchet:abcxyz/secure-setup-terraform@main
-        with:
-          terraform_version: '${{ env.GUARDIAN_TERRAFORM_VERSION }}'
-          terraform_module_location: './${{ matrix.working_directory }}'
-          terraform_lockfile_location: './${{ matrix.working_directory }}'
-          protect_lockfile: true
-          terraform_wrapper: false
-
-      - name: 'Download Guardian'
-        uses: 'actions/download-artifact@65a9edc5881444af0b9093a5e628f2fe47ea3b2e' # ratchet:actions/download-artifact@v4
-        with:
-          name: 'guardian'
-          path: '${{ runner.temp }}/.guardian'
-
-      - name: 'Setup Guardian'
-        env:
-          INSTALL_PATH: '${{ runner.temp }}/.guardian'
-        run: |-
-          chmod +x "${INSTALL_PATH}/guardian"
-          echo "${INSTALL_PATH}" >> $GITHUB_PATH
-
-      # Since our tests are stateless, we need an apply before a plan destroy
-      - name: 'Guardian Apply'
-        shell: 'bash'
-        run: |-
-          guardian run -dir="${DIRECTORY}" -- apply -input=false -auto-approve
-
-      - name: 'Guardian Plan'
-        shell: 'bash'
-        env:
-          # used to create comments on pull requests (access to only this repo)
-          GUARDIAN_GITHUB_TOKEN: '${{ github.token }}'
-        run: |-
-          guardian plan -dir="${DIRECTORY}" -storage="gcs://${GUARDIAN_BUCKET_NAME}" -destroy
-
-      # this is done only for integration testing since our tests do not have remote state.
-      # we plan the destroy and apply the destroy in the same step.
-      - name: 'Guardian Destroy'
-        shell: 'bash'
-        env:
-          # used to create comments on pull requests (access to only this repo)
-          GUARDIAN_GITHUB_TOKEN: '${{ github.token }}'
-        run: |-
-          guardian apply -dir="${DIRECTORY}" -storage="gcs://${GUARDIAN_BUCKET_NAME}" -destroy
-
   plan_success:
     if: '${{ always() }}'
     needs:
       - 'init-plan'
       - 'plan'
-      - 'plan_destroy'
     runs-on: 'ubuntu-latest'
     permissions:
       contents: 'read'
@@ -286,22 +206,19 @@ jobs:
         run: |-
           guardian workflows plan-status-comment \
             -init-result="${{ needs.init-plan.result }}" \
-            -plan-result="${{ needs.plan.result }}" \
-            -plan-result="${{ needs.plan_destroy.result }}"
+            -plan-result="${{ needs.plan.result }}"
 
   init-apply:
     needs:
       - 'build'
       - 'init-plan'
       - 'plan'
-      - 'plan_destroy'
     runs-on: 'ubuntu-latest'
     permissions:
       contents: 'read'
       pull-requests: 'write'
     outputs:
-      update-dirs: '${{ steps.entrypoints.outputs.update-dirs }}'
-      destroy-dirs: '${{ steps.entrypoints.outputs.destroy-dirs }}'
+      directories: '${{ steps.dirs.outputs.directories }}'
     steps:
       - name: 'Checkout'
         uses: 'actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332' # ratchet:actions/checkout@v4
@@ -322,22 +239,18 @@ jobs:
           echo "${INSTALL_PATH}" >> $GITHUB_PATH
 
       - name: 'Guardian Directories'
-        id: 'entrypoints'
+        id: 'dirs'
         shell: 'bash'
         env:
           GUARDIAN_GITHUB_TOKEN: '${{ github.token }}'
-          GITHUB_PULL_REQUEST_BODY: 'GUARDIAN_DESTROY=terraform/project2'
         run: |-
-          ENTRYPOINTS=$(guardian entrypoints -dir=./terraform/project1 -dir=./terraform/project2 -reporter="none")
-          echo "entrypoints -> ${ENTRYPOINTS}"
-
-          # parse the json response and create outputs for each type of directory
-          echo "update-dirs=$(echo $ENTRYPOINTS | jq -j -c '.update')" >> $GITHUB_OUTPUT
-          echo "destroy-dirs=$(echo $ENTRYPOINTS | jq -j -c '.destroy')" >> $GITHUB_OUTPUT
+          DIRECTORIES=$(guardian entrypoints -dir=./terraform/project1 -dir=./terraform/project2 -reporter="none")
+          echo "entrypoints -> ${DIRECTORIES}"
+          echo "directories=${DIRECTORIES}" >> $GITHUB_OUTPUT
 
   apply:
     if: |
-      needs.init-apply.outputs.update-dirs != '[]'
+      needs.init-apply.outputs.directories != '[]'
     needs:
       - 'init-apply'
       - 'plan'
@@ -351,7 +264,7 @@ jobs:
       fail-fast: false
       max-parallel: 100
       matrix:
-        working_directory: '${{ fromJSON(needs.init-apply.outputs.update-dirs) }}'
+        working_directory: '${{ fromJSON(needs.init-apply.outputs.directories) }}'
     env:
       DIRECTORY: '${{ matrix.working_directory }}'
       GITHUB_JOB_NAME: '${{ github.job }} (${{ matrix.working_directory }})'
