Add pull-requests write permission to guardian apply entrypoints

--- a/abc.templates/base-workflows/contents/guardian-apply.yml
+++ b/abc.templates/base-workflows/contents/guardian-apply.yml
@@ -39,6 +39,7 @@ jobs:
 
     permissions:
       contents: 'read'
+      pull-requests: 'write'
 
     outputs:
       directories: '${{ steps.dirs.outputs.directories }}'
