Update golden tests

--- a/abc.templates/base-workflows/spec.yaml
+++ b/abc.templates/base-workflows/spec.yaml
@@ -37,8 +37,8 @@ steps:
     action: 'include'
     params:
       paths:
-        - 'contents'
-        - 'contents/admin_workflow_permissions.rego'
+        - 'contents/workflows'
+        - 'contents/policies/admin_workflow_permissions.rego'
       as:
         - '.github/workflows'
         - 'policy/guardian/admin/workflow_permissions.rego'
