Combine guardian admin and run to add policy enforcement

--- a/abc.templates/base-workflows/contents/workflows/guardian-nightly.yml
+++ b/abc.templates/base-workflows/contents/workflows/guardian-nightly.yml
@@ -27,9 +27,8 @@ jobs:
     name: 'Guardian run plan'
     uses: './.github/workflows/guardian-run.yml'
     with:
-      command: 'plan'
+      command: 'plan --detailed-exitcode'
       entrypoint: 'REPLACE_TERRAFORM_DIRECTORY'
-      detailed-exitcode: true
 
   nightly-plan:
     runs-on: 'ubuntu-latest'
